--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -31,9 +31,55 @@
                 border-bottom: 2px solid $light-grey;
                 font-family: $font-body;
                 font-weight: 700;
-                margin: 0 5px;
+                margin: 0 15px 0 5px;
                 color: $dark-grey;
                 cursor: pointer;
+            }
+        }
+
+        .checkbox-container {
+            position: absolute;
+            top: 100%;
+            left: 5px;
+            border: 1px solid $light-grey;
+            background-color: $white;
+            transform: translateY(15px);
+            transition: all .3s;
+
+
+            &::before {
+                content: '';
+                position: absolute;
+                bottom: 100%;
+                left: 30%;
+                width: 15px;
+                height: 15px;
+                transform: rotate(45deg) translateY(10px);
+                background-color: $white;
+                border-top: 1px solid $light-grey;
+                border-left: 1px solid $light-grey;
+            }
+
+            .option {
+                border-bottom: 1px solid $light-grey;
+                padding: 10px 30px 10px 5px;
+                cursor: pointer;
+
+                &:hover {
+                    background-color: $off-white;
+                }
+
+                input {
+                    margin-right: 5px;
+                }
+
+                label {
+                    text-transform: uppercase;
+                    font-size: 12px;
+                    font-weight: 700;
+                    color: $dark-grey;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -42,8 +88,9 @@
         position: absolute;
         top: 50%;
         right: 0;
-        transform: translate(-50%,-50%);
+        transform: translate(-150%,-50%);
         color: $dark-grey;
+        pointer-events: none;
 
         &--search {
             font-size: 22px;
@@ -65,6 +112,8 @@
     .radios {
         label {
             padding: 0 10px 0 5px;
+            font-weight: 700;
+            font-size: 16px;
         }
     }
 
@@ -81,11 +130,6 @@
         &:hover {
             color: $dark-blue;
         }
-    }
-
-    label {
-        font-weight: 700;
-        font-size: 16px;
     }
 }
 
@@ -118,6 +162,13 @@
             font-weight: 700;
             font-size: 14px;
             margin-top: 0;
+            text-transform: capitalize;
+
+            span:not(:last-child) {
+                &::after {
+                    content: ',';
+                }
+            }
         }
     }
 }
